Closed Bug 505750 Opened 16 years ago Closed 16 years ago

Fix nsDOMStorage.cpp:CheckSecure code to not mask by IsSecure() result, coverity doesn't like it

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mayhemer, Assigned: mayhemer)

References

(Blocks 1 open bug)

Details

(Keywords: coverity)

Attachments

(1 file)

Use 'if (IsSecure()) { *secure = PR_TRUE; return PL_DHASH_STOP; }'
Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
Attachment #393490 - Flags: review?
Attachment #393490 - Flags: review? → review?(timeless)
Attachment #393490 - Flags: review?(timeless) → review+
Attachment #393490 - Attachment description: v1 → v1 [Checkin comment 2]
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: