Bug 505750 - Fix nsDOMStorage.cpp:CheckSecure code to not mask by IsSecure() result, coverity doesn't like it, r=timeless