dom/src/storage/nsDOMStorage.cpp
@@ -1061,7 +1061,10 @@ PR_STATIC_CALLBACK(PLDHashOperator)
 CheckSecure(nsSessionStorageEntry* aEntry, void* userArg)
 {
   PRBool* secure = (PRBool*)userArg;
-  *secure |= aEntry->mItem->IsSecure();
+  if (aEntry->mItem->IsSecure()) {
+    *secure = PR_TRUE;
+    return PL_DHASH_STOP;
+  }
 
   return PL_DHASH_NEXT;
 }
